@@ -47,6 +47,10 @@ static const char* Copyright = "(C) Copyright Michigan State University 2009, Al
 /*
   Change Log:
   $Log$
+  Revision 5.5  2007/05/11 20:51:57  ron-fox
+  Make NSCLAsciiSpectrumFormatter correctly deal with rev 2, 3 and
+  'malforme3d 2' produced by version 3.2-pre2 for summary spectra.
+
   Revision 5.4  2007/05/11 15:30:53  ron-fox
   Change spectrum I/O format version to 3.  Need to figure out how to read 2
   for e.g. summary spectra.
@@ -242,6 +246,7 @@ CNSCLAsciiSpectrumFormatter::Read(istream& rStream,
   DataType_t     eDataType;	// Data type of spectrum.
   vector<UInt_t> vDimensions;	// # channels in each dimension.
   //  vector<UInt_t> vResolutions;	// Spectrum channel resolutions.
+
   vector<string> vParameters;	// Vector of parameter names.
   vector<string> vyParameters;  // Parameters on y axis for g2d delux.
   vector<Float_t> vLows;
@@ -256,7 +261,7 @@ CNSCLAsciiSpectrumFormatter::Read(istream& rStream,
   // Summary spectra are weird... Although 2-d, they only have a single
   // low/high specification, and that's determined by their
   // second dimension.  Here we do that special case translation:
-
+  // Note that in version 3 of the format, only the single dimension is shown.
 
 
   vector<Float_t> createLows;
@@ -264,14 +269,27 @@ CNSCLAsciiSpectrumFormatter::Read(istream& rStream,
   vector<UInt_t>  createDims;
 
   if(eSpecType == keSummary) {
-    UInt_t  nChannels = vDimensions[1];
+    UInt_t nChannels;
+    if (nRevision == 3) {
+      nChannels = vDimensions[0];
+    }
+    else {
+      // There was a time that I had not incremented the
+      // rev level to 2, but wrote only 1 dim:
+
+      if (vDimensions.size() == 1) {
+	nChannels = vDimensions[0];
+      } else {
+	nChannels = vDimensions[1];
+      }
+    }
     Float_t fLow      = vLows[1];
     Float_t fHigh     = vHighs[1];
-
+    
     createDims.push_back(nChannels);
     createLows.push_back(fLow);
     createHighs.push_back(fHigh);
-
+    
   }
   else {
     createDims = vDimensions;
@@ -300,7 +318,19 @@ CNSCLAsciiSpectrumFormatter::Read(istream& rStream,
   // Fill in the spectrum:
   //
   pSpectrum->Clear();
+
+  // Once more a wierdness of summary spectra.. at this time
+  // vDimensions won't be right for them:
+
+  if (eSpecType == keSummary) {
+    vDimensions.clear();
+    vDimensions.push_back(vParameters.size());  // X axis dim is parameter count.
+    vDimensions.push_back(createDims[0]);       // and y axis is the 1 creation dim.
+  }
+
   try {
+
+
     ReadBody(rStream, vDimensions, pSpectrum);
   }
   catch(...) {			// If an exception is thrown delete the our
@@ -789,13 +819,15 @@ CNSCLAsciiSpectrumFormatter::ReadHeader(istream&  rStream,
     vector<string> Limits;
     DecodeListOfParenLists(strLimits, Limits);
 
-    if(Limits.size() != rDimensions.size()) {
+    if(!LimitCountOk(rSpecType, Limits.size(), rDimensions.size())) {
       throw 
 	CSpectrumFormatError(
 		     CSpectrumFormatError::InvalidHeader,
 		    "Axis limit count differs from  dimensionality");
     }
-    for(int i = 0; i < rDimensions.size(); i++ ) { // process limits.
+
+
+    for(int i = 0; i < Limits.size(); i++ ) { // process limits.
       vector<string> LimitPair;
       istringstream strPair(Limits[i].c_str());
       DecodeParenList(strPair, LimitPair);
@@ -1189,4 +1221,23 @@ CNSCLAsciiSpectrumFormatter::DecodeListOfParenLists(
     skipwhite(rStream);		// Skip to next item or end.
   }
 }
+//
+// Local function to ensure that spectrum limit counts are ok
+// For all but summary spectra this just requires that
+// the number of limits is the same as the number of dimensions..
+// for summmary spectra the number of limits is 2 but the number
+// of dimensions will be either 1 or 2 depending on the file format
+// version number.
+//
+bool
+CNSCLAsciiSpectrumFormatter::LimitCountOk(SpectrumType_t type,
+					  size_t         limits,
+					  size_t         dimensions)
+{
+  if (limits == dimensions) return true;
 
+  if (type == keSummary) {
+    return limits == 2;
+  }
+  return false;
+}
